kubernetes/jsdyb-k8s-001/apps/flux-system/add-ons/webhooks/github/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  namespace: flux-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx-external
  rules:
    - host: &host flux-webhook.${EXTERNAL_DOMAIN}
      http:
        paths:
          - path: /hook/
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
  tls:
    - hosts:
        - *host
      secretName: flux-webhook-tls-external
